# KurqiUIPackage

./: README.md  pyproject.toml  setup.py
.github/workflows/: workflow.yml
kuqirui/: ___init__.py  core.py  widgets.py
tests/: app_test.py
