[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "KuqirUI"
version = "1.0.0"
authors = [
  { name="Lattesiber", email="a8112146@gmail.com" },
]
description = "Modern VS Code style UI library for PySide6"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "PySide6"
]
